<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailArticleActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/root">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stunting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stunting_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penyebab_stunting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/penyebab_stunting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/penyebab_stunting"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/syndrome_stunting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/syndrome_stunting"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/syndrome_stunting"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langkah_pencegahan_stunting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langkah_pencegahan_stunting_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adaptasi_intervelensi_anemia"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/adaptasi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/adaptasi"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dampak_kekurangan_gizi"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dampak_kekurangan_gizi_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/dampak_kurang_gizi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/dampak_kurang_gizi"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faktor_kontribusi_stunting"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faktor_kontribusi_stunting_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faktor_kontribusi_stunting_2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faktor_kontribusi_stunting_2_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/definisi_pertumbuhan_perkembangan"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/definisi_pertumbuhan_perkembangan_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gangguan_tumbuh_kembang"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gangguan_tumbuh_kembang_desc"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"/>

    </LinearLayout>

</ScrollView>