<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/berandaFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always"
        android:title="@string/beranda"/>
    <item
        android:id="@+id/rekapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_trending_up_24"
        app:showAsAction="always"
        android:title="@string/rekap"/>
    <item
        android:id="@+id/posyanduFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_hospital_24"
        app:showAsAction="always"
        android:title="@string/posyandu"/>
    <item
        android:id="@+id/chatDocFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        app:showAsAction="always"
        android:title="@string/chat"/>
</menu>