<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_round_white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistik_anak_keseluruhan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/status_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Ideal"
        app:layout_constraintTop_toBottomOf="@id/status_title"
        app:layout_constraintStart_toStartOf="@id/status_title"/>

    <TextView
        android:id="@+id/status_bulanan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_bulanan"
        app:layout_constraintTop_toTopOf="@id/status_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/status_bulanan_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meningkat"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/status_bulanan_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/zscore_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_score"
        app:layout_constraintTop_toTopOf="@id/status_title"
        app:layout_constraintStart_toEndOf="@id/status_title"
        app:layout_constraintEnd_toStartOf="@id/status_bulanan_title"/>

    <TextView
        android:id="@+id/zscore_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.25%"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/status_bulanan_title"
        app:layout_constraintStart_toStartOf="@id/zscore_title"
        app:layout_constraintEnd_toEndOf="@id/zscore_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>