<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ChooseRoleFragment">

    <LinearLayout
        android:id="@+id/telu_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primary_dark"
            android:letterSpacing="0.09"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/telkom_university_logo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/masuk_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/telu_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/auth_posyandu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kader_posyandu"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/root"
        android:layout_marginEnd="@dimen/root"
        android:layout_marginTop="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/masuk_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/auth_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/orang_tua_anak"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/auth_posyandu"
        app:layout_constraintEnd_toEndOf="@id/auth_posyandu"
        app:layout_constraintStart_toStartOf="@id/auth_posyandu" />

</androidx.constraintlayout.widget.ConstraintLayout>