<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/root">

            <LinearLayout
                android:id="@+id/telu_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powered_by"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_dark"
                    android:letterSpacing="0.09"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/telkom_university_logo"/>

            </LinearLayout>

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/telu_logo"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@id/login_title"
                app:layout_constraintStart_toStartOf="@id/login_title"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_auth_input"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintStart_toStartOf="@id/login_title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@id/login_email"
                app:layout_constraintStart_toStartOf="@id/login_title"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_auth_input"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                android:paddingEnd="10dp"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="@id/login_title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />



            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                app:layout_constraintTop_toBottomOf="@id/login_password"
                app:layout_constraintStart_toStartOf="@id/login_title"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="#19A54A"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="37dp"
                app:layout_constraintStart_toStartOf="@id/login_title"
                app:layout_constraintEnd_toEndOf="@id/login_email"
                app:layout_constraintTop_toBottomOf="@id/forget_password"/>

<!--            <Button-->
<!--                android:id="@+id/btn_login_with_google"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/login_with_google"-->
<!--                android:backgroundTint="#3044F9"-->
<!--                android:textColor="@color/white"-->
<!--                android:textAllCaps="false"-->
<!--                android:layout_marginTop="15dp"-->
<!--                app:layout_constraintStart_toStartOf="@id/login_title"-->
<!--                app:layout_constraintEnd_toEndOf="@id/login_email"-->
<!--                app:layout_constraintTop_toBottomOf="@id/btn_login"/>-->

            <TextView
                android:id="@+id/belum_punya_akun_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/login_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/daftar_disini"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:textColor="#15A4A4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/belum_punya_akun_text"
                app:layout_constraintStart_toStartOf="@id/belum_punya_akun_text"
                app:layout_constraintEnd_toEndOf="@id/belum_punya_akun_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>